--- a/src/client/index.less
+++ b/src/client/index.less
@@ -1,3 +1,5 @@
+@import '~/node_modules/react-datepicker/dist/react-datepicker.css';
+
 @import 'image-gallery-editor-widget';
 @import 'image-gallery-widget';
 
