--- a/src/client/index.less
+++ b/src/client/index.less
@@ -1,7 +1,7 @@
 @import '~/node_modules/react-datepicker/dist/react-datepicker.css';
 
-@import 'image-gallery-editor-widget';
-@import 'image-gallery-widget';
+@import '../shared/image-gallery-editor-widget';
+@import '../shared/image-gallery-widget';
 
 body {
   background-color: yellow;
