--- a/src/client/index.less
+++ b/src/client/index.less
@@ -1,4 +1,4 @@
-@import '~/node_modules/react-datepicker/dist/react-datepicker.css';
+@import '../../node_modules/react-datepicker/dist/react-datepicker.css';
 
 @import '../shared/image-gallery-editor-widget';
 @import '../shared/image-gallery-widget';
