--- a/src/client/index.less
+++ b/src/client/index.less
@@ -1,8 +1,36 @@
+@charset "utf-8";
+
 @import '../../node_modules/react-datepicker/dist/react-datepicker.css';
 
+@import '../shared/app-frame';
 @import '../shared/image-gallery-editor-widget';
 @import '../shared/image-gallery-widget';
 
+/* Reset and global setup */
+
+@media all and (min-width: 800px) {
+    body {
+        width: 800px;
+    }
+}
+
 body {
-  background-color: yellow;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.5;
+    color: #111;
+    background-color: #fdfdfd;
+    margin: auto;
+}
+
+h1, h2, h3, h4, h5, h6, dl, dd, ol, ul, p {
+    margin: 0;
+    padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 300;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
