--- a/src/client/index.less
+++ b/src/client/index.less
@@ -5,6 +5,7 @@
 @import '../shared/app-frame';
 @import '../shared/image-gallery-editor-widget';
 @import '../shared/image-gallery-widget';
+@import '../shared/user-info-widget';
 
 /* Reset and global setup */
 
