--- a/src/shared/app-frame.less
+++ b/src/shared/app-frame.less
@@ -6,5 +6,19 @@
 
     .header-section {
         display: inline-block;
+
+        &.links {
+            a {
+                margin-left: 0.5em;
+                margin-right: 0.5em;
+                text-decoration: none;
+            }
+        }
+
+        &.title {
+            font-size: 2em;
+            font-weight: 600;
+            font-variant: small-caps;
+        }
     }
 }
