--- a/src/shared/app-frame.less
+++ b/src/shared/app-frame.less
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 2em;
 
     .header-section {
         display: inline-block;
