More styling for the header portion

--- a/src/shared/app-frame.less
+++ b/src/shared/app-frame.less
@@ -13,6 +13,8 @@
                 margin-left: 0.5em;
                 margin-right: 0.5em;
                 text-decoration: none;
+                font-weight: 900;
+                font-variant: small-caps;
             }
         }
 
