--- a/src/shared/user-info-widget.less
+++ b/src/shared/user-info-widget.less
@@ -6,6 +6,8 @@
             margin-left: 0.5em;
             margin-right: 0.5em;
             text-decoration: none;
+            font-weight: 900;
+            font-variant: small-caps;
         }
     }
 }
