Style tweaks to the main page

--- a/src/shared/app-frame.less
+++ b/src/shared/app-frame.less
@@ -25,3 +25,23 @@
         }
     }
 }
+
+#app-frame-footer {
+    margin-top: 2em;
+    text-align: center;
+
+    .company {
+        line-height: 2em;
+        font-size: 0.75em;
+
+        a {
+            margin-left: 0.5em;
+            margin-right: 0.5em;
+        }
+    }
+
+    .copyright {
+        font-size: 0.75em;
+        color: #111111;
+    }
+}
