--- a/src/client/index.less
+++ b/src/client/index.less
@@ -3,6 +3,7 @@
 @import '../../node_modules/react-datepicker/dist/react-datepicker.css';
 
 @import '../shared/app-frame';
+@import '../shared/cookie-policy-widget';
 @import '../shared/image-gallery-editor-widget';
 @import '../shared/image-gallery-widget';
 @import '../shared/user-info-widget';
