--- a/src/shared/app-frame.less
+++ b/src/shared/app-frame.less
@@ -27,17 +27,22 @@
 }
 
 #app-frame-footer {
-    margin-top: 2em;
+    padding-top: 1em;
+    margin-top: 1em;
     text-align: center;
+    border-top: 1px solid #dfdfdf;
 
     .company {
         line-height: 2em;
-        font-size: 0.75em;
 
-        a {
-            margin-left: 0.5em;
-            margin-right: 0.5em;
-        }
+	.content {
+            font-size: 0.75em;
+
+            a {
+		margin-left: 0.5em;
+		margin-right: 0.5em;
+            }
+	}
     }
 
     .copyright {
