--- a/src/shared/app-frame.less
+++ b/src/shared/app-frame.less
@@ -1,5 +1,5 @@
 #app-frame-header {
-    line-height: 4rem;
+    line-height: 4em;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
