--- a/src/shared/user-info-widget.less
+++ b/src/shared/user-info-widget.less
@@ -1,6 +1,26 @@
+@import './action-button';
+
+
 #app-frame-header {
     .header-section {
         display: inline-block;
+
+	.profile-picture {
+	    width: 2em;
+	    height: 2em;
+	    border-radius: 1em;
+	    margin-right: 1em;
+	    display: inline-block;
+	    position: relative;
+	    float: left;
+	    top: 1em;
+	}
+
+	.action {
+	    position: relative;
+	    float: left;
+	    top: 1.125em;
+	}
 
         a.auth-button {
             margin-left: 0.5em;
