--- a/src/shared/app-frame.less
+++ b/src/shared/app-frame.less
@@ -1,17 +1,35 @@
+@bordercolor: #dfdfdf;
+
+#app-frame-sm-title {
+    @media all and (min-width: 800px) {
+	display: none;
+    }
+
+    text-align: center;
+    
+    a {
+	font-size: 2em;
+	font-weight: 600;
+	text-decoration: none;
+	font-variant: small-caps;
+	color: black;
+    }
+}
+
 #app-frame-header {
     line-height: 4em;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 2em;
+    border-bottom: 1px solid @bordercolor;
 
     .header-section {
         display: inline-block;
 
         &.links {
             a {
-                margin-left: 0.5em;
-                margin-right: 0.5em;
+                margin-left: 1em;
                 text-decoration: none;
                 font-weight: 900;
                 font-variant: small-caps;
@@ -19,10 +37,22 @@
         }
 
         &.title {
-            font-size: 2em;
-            font-weight: 600;
-            font-variant: small-caps;
-        }
+	    @media all and (max-width: 800px) {
+		display: none;
+	    }
+	    
+	    a {
+		font-size: 2em;
+		font-weight: 600;
+		text-decoration: none;
+		font-variant: small-caps;
+		color: black;
+            }
+	}
+
+	&.user-info {
+	    order: 3;
+	}
     }
 }
 
@@ -30,7 +60,7 @@
     padding-top: 1em;
     margin-top: 1em;
     text-align: center;
-    border-top: 1px solid #dfdfdf;
+    border-top: 1px solid @bordercolor;
 
     .company {
         line-height: 2em;
