--- a/src/client/index.less
+++ b/src/client/index.less
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+@import '../../node_modules/normalize.css/normalize.css';
 @import '../../node_modules/react-datepicker/dist/react-datepicker.css';
 
 @import '../shared/app-frame';
