--- a/src/shared/user-info-widget.less
+++ b/src/shared/user-info-widget.less
@@ -1,56 +1,110 @@
 @import './action-button';
+@import './colors';
 
 
-#app-frame-header {
-    .header-section {
-        display: inline-block;
+#app-frame-header .header-section {
+    position: relative; /* So the #overlay-menu knows to position itself relative to this */
+    display: inline-block;
 
-	.profile-picture {
-	    width: 2em;
-	    height: 2em;
-	    border-radius: 1em;
-	    margin-right: 1em;
-	    display: inline-block;
-	    position: relative;
-	    float: left;
-	    top: 1em;
-	}
+    #overlay-menu {
+        z-index: 1000;
+        background-color: white;
+        border: 1px solid @bordercolor;
+        top: 0px;
+        right: 0px;
 
-	.action {
-	    position: relative;
-	    float: left;
-	    top: 1.125em;
-	    margin-right: 1em;
-	    height: 2em;
-	}
-
-	.menu {
-	    outline: none;
-	    width: 2em;
-	    height: 2em;
-	    background-color: transparent;
-	    background-repeat: no-repeat;
-	    background-size: cover;
-	    border: none;
-	    position: relative;
-	    float: left;
-	    top: 1.125em;
-	    margin-right: 1em;
-
-	    &.closed {
-		background-image: url('./static/menu-icon.svg');
-	    }
-
-	    &.open {
-		background-image: url('./static/menu-close-icon.svg');
-	    }
-	}
-
-        a.auth-button {
-            margin-right: 1em;
-            text-decoration: none;
-            font-weight: 900;
-            font-variant: small-caps;
+        @media all and (min-width: 800px) {
+            position: absolute;
+            width: 20em;
         }
+
+        @media all and (max-width: 800px) {
+            position: fixed;
+            top: 3em;
+            width: 100%;
+            height: 100vh;
+        }
+
+        .container1 {
+            margin: 1em;
+            text-align: center;
+
+            .container2 {
+                display: flex;
+                justify-content: space-between;
+                text-align: start;
+
+                .actions {
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    
+                    a {
+                        line-height: 2em;
+                        margin-bottom: 2em;
+                        text-decoration: none;
+                        font-weight: 900;
+                        font-variant: small-caps;
+                    }
+
+                    a:last-child {
+                        margin-bottom: 0em;
+                    }
+
+                    button.action {
+                        align-self: center;
+                    }
+                }
+
+
+                button.menu-open {
+	            outline: none;
+	            width: 2em;
+	            height: 2em;
+	            background-color: transparent;
+                    background-image: url('./static/menu-close-icon.svg');
+	            background-repeat: no-repeat;
+	            background-size: cover;
+	            border: none;
+                    padding: 0px;
+                    /* WTF WTF WTF */
+                    top: -0.375em;
+                    position: relative;
+                }
+            }
+        }
+    }    
+
+    img.profile-picture {
+	width: 2em;
+	height: 2em;
+	border-radius: 1em;
+	margin-right: 1em;
+	display: inline-block;
+	position: relative;
+	float: left;
+	top: 1em;
+    }
+
+    button.menu-closed {
+	outline: none;
+	width: 2em;
+	height: 2em;
+	background-color: transparent;
+        background-image: url('./static/menu-icon.svg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	border: none;
+	position: relative;
+	float: left;
+	top: 1em;
+	margin-right: 1em;
+    }
+
+    a.auth-button {
+        margin-right: 1em;
+        text-decoration: none;
+        font-weight: 900;
+        font-variant: small-caps;
     }
 }
