Add icons for the menu

--- a/src/shared/user-info-widget.less
+++ b/src/shared/user-info-widget.less
@@ -38,6 +38,34 @@
                     display: flex;
                     flex-direction: column;
                     width: 100%;
+
+                    .menu-icon {
+                        background-color: transparent;
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        display: inline-block;
+                        width: 1.125em;
+                        height: 1.125em;
+                        margin-right: 0.25em;
+                        position: relative;
+                        top: 0.125em;
+                        
+                        &.my-cause {
+                            background-image: url('./static/cause-icon.svg');
+                        }
+
+                        &.cause-analytics {
+                            background-image: url('./static/cause-analytics-icon.svg');
+                        }
+
+                        &.my-actions {
+                            background-image: url('./static/my-actions-icon.svg');
+                        }
+
+                        &.account {
+                            background-image: url('./static/account-icon.svg');
+                        }
+                    }
                     
                     a {
                         line-height: 2em;
