Some work on styling for the admin frame

--- a/src/client/index.less
+++ b/src/client/index.less
@@ -3,6 +3,7 @@
 @import '../../node_modules/normalize.css/normalize.css';
 @import '../../node_modules/react-datepicker/dist/react-datepicker.css';
 
+@import '../shared/admin-frame';
 @import '../shared/app-frame';
 @import '../shared/cookie-policy-widget';
 @import '../shared/image-gallery-editor-widget';
