Work on the home page for displaying causes

--- a/src/client/index.less
+++ b/src/client/index.less
@@ -6,8 +6,10 @@
 @import '../shared/admin-frame';
 @import '../shared/app-frame';
 @import '../shared/cookie-policy-widget';
+@import '../shared/home-view';
 @import '../shared/image-gallery-editor-widget';
 @import '../shared/image-gallery-widget';
+@import '../shared/public-cause-widget';
 @import '../shared/user-info-widget';
 
 /* Reset and global setup */
