--- a/src/shared/public-cause-widget.less
+++ b/src/shared/public-cause-widget.less
@@ -3,12 +3,14 @@
 
 .public-cause-widget {
     @media all and (min-width: 800px) {
-	width: 23.49em;
+	width: 23.49rem;
     }
     @media all and (max-width: 800px) {
 	width: 100%;
     }
 
+    display: flex;
+    flex-direction: column;
     margin-bottom: 1em;
     border: 1px solid @bordercolor;
     box-sizing: border-box;
@@ -16,6 +18,23 @@
     .cause-picture {
 	width: 100%;
 	height: auto;
+    }
+
+    .cause-title {
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        
+        a {
+            font-size: 1.5rem;
+            line-height: 2rem;
+            font-weight: 500;
+            text-decoration: none;
+            font-variant: small-caps;
+            color: black;
+        }
     }
 }
 
