Move all ems to rems

--- a/src/shared/cookie-policy-widget.less
+++ b/src/shared/cookie-policy-widget.less
@@ -2,17 +2,17 @@
 
 
 #cookie-policy-widget {
-    line-height: 2em;
+    line-height: 2rem;
     text-align: center;
 
     .content {
-	font-size: 0.75em;
+	font-size: 0.75rem;
 
 	> * {
-            margin-right: 0.2em;
+            margin-right: 0.2rem;
 
             &:last-child {
-		margin-right: 0em;
+		margin-right: 0rem;
 	    }
 	}
     }
