--- a/src/shared/action-button.less
+++ b/src/shared/action-button.less
@@ -7,9 +7,9 @@ button.action {
     -moz-border-radius: 5px 5px 5px 5px;
     font-family: Arial;
     width: auto;
-    height: 1.75em;
-    font-size: 1em;
-    padding: 0px 1em;
+    height: 1.75rem;
+    font-size: 1rem;
+    padding: 0px 1rem;
     box-shadow: inset 0 1px 0 0 #fff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2,0 2px 4px 0 #f2f2f2;
     -moz-box-shadow: inset 0 1px 0 0 #fff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2,0 2px 4px 0 #f2f2f2;
     -webkit-box-shadow: inset 0 1px 0 0 #fff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2,0 2px 4px 0 #f2f2f2;
