--- a/src/shared/app-frame.less
+++ b/src/shared/app-frame.less
@@ -9,7 +9,7 @@
     text-align: center;
     
     a {
-	font-size: 2em;
+	font-size: 2rem;
 	font-weight: 600;
 	text-decoration: none;
 	font-variant: small-caps;
@@ -18,11 +18,11 @@
 }
 
 #app-frame-header {
-    line-height: 4em;
+    line-height: 4rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 2em;
+    margin-bottom: 2rem;
     border-bottom: 1px solid @bordercolor;
 
     .header-section {
@@ -30,7 +30,7 @@
 
         &.links {
             a {
-                margin-left: 1em;
+                margin-left: 1rem;
                 text-decoration: none;
                 font-weight: 900;
                 font-variant: small-caps;
@@ -43,7 +43,7 @@
 	    }
 	    
 	    a {
-		font-size: 2em;
+		font-size: 2rem;
 		font-weight: 600;
 		text-decoration: none;
 		font-variant: small-caps;
@@ -58,26 +58,26 @@
 }
 
 #app-frame-footer {
-    padding-top: 1em;
-    margin-top: 1em;
+    padding-top: 1rem;
+    margin-top: 1rem;
     text-align: center;
     border-top: 1px solid @bordercolor;
 
     .company {
-        line-height: 2em;
+        line-height: 2rem;
 
 	.content {
-            font-size: 0.75em;
+            font-size: 0.75rem;
 
             a {
-		margin-left: 0.5em;
-		margin-right: 0.5em;
+		margin-left: 0.5rem;
+		margin-right: 0.5rem;
             }
 	}
     }
 
     .copyright {
-        font-size: 0.75em;
+        font-size: 0.75rem;
         color: #111111;
     }
 }
