--- a/src/shared/public-cause-widget.less
+++ b/src/shared/public-cause-widget.less
@@ -11,7 +11,7 @@
 
     display: flex;
     flex-direction: column;
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
     border: 1px solid @bordercolor;
     box-sizing: border-box;
 
