--- a/src/shared/user-info-widget.less
+++ b/src/shared/user-info-widget.less
@@ -15,18 +15,18 @@
 
         @media all and (min-width: 800px) {
             position: absolute;
-            width: 20em;
+            width: 20rem;
         }
 
         @media all and (max-width: 800px) {
             position: fixed;
-            top: 3em;
+            top: 3rem;
             width: 100%;
             height: 100vh;
         }
 
         .container1 {
-            margin: 1em;
+            margin: 1rem;
             text-align: center;
 
             .container2 {
@@ -44,11 +44,11 @@
                         background-repeat: no-repeat;
                         background-size: cover;
                         display: inline-block;
-                        width: 1.125em;
-                        height: 1.125em;
-                        margin-right: 0.25em;
+                        width: 1.125rem;
+                        height: 1.125rem;
+                        margin-right: 0.25rem;
                         position: relative;
-                        top: 0.125em;
+                        top: 0.125rem;
                         
                         &.my-cause {
                             background-image: url('./static/cause-icon.svg');
@@ -68,15 +68,15 @@
                     }
                     
                     a {
-                        line-height: 2em;
-                        margin-bottom: 2em;
+                        line-height: 2rem;
+                        margin-bottom: 2rem;
                         text-decoration: none;
                         font-weight: 900;
                         font-variant: small-caps;
                     }
 
                     a:last-child {
-                        margin-bottom: 0em;
+                        margin-bottom: 0rem;
                     }
 
                     button.action {
@@ -87,8 +87,8 @@
 
                 button.menu-open {
 	            outline: none;
-	            width: 2em;
-	            height: 2em;
+	            width: 2rem;
+	            height: 2rem;
 	            background-color: transparent;
                     background-image: url('./static/menu-close-icon.svg');
 	            background-repeat: no-repeat;
@@ -96,7 +96,7 @@
 	            border: none;
                     padding: 0px;
                     /* WTF WTF WTF */
-                    top: -0.375em;
+                    top: -0.375rem;
                     position: relative;
                 }
             }
@@ -104,20 +104,20 @@
     }    
 
     img.profile-picture {
-	width: 2em;
-	height: 2em;
-	border-radius: 1em;
-	margin-right: 1em;
+	width: 2rem;
+	height: 2rem;
+	border-radius: 1rem;
+	margin-right: 1rem;
 	display: inline-block;
 	position: relative;
 	float: left;
-	top: 1em;
+	top: 1rem;
     }
 
     button.menu-closed {
 	outline: none;
-	width: 2em;
-	height: 2em;
+	width: 2rem;
+	height: 2rem;
 	background-color: transparent;
         background-image: url('./static/menu-icon.svg');
 	background-repeat: no-repeat;
@@ -125,12 +125,12 @@
 	border: none;
 	position: relative;
 	float: left;
-	top: 1em;
-	margin-right: 1em;
+	top: 1rem;
+	margin-right: 1rem;
     }
 
     a.auth-button {
-        margin-right: 1em;
+        margin-right: 1rem;
         text-decoration: none;
         font-weight: 900;
         font-variant: small-caps;
