Add more styling for the public cause

--- a/src/shared/public-cause-widget.less
+++ b/src/shared/public-cause-widget.less
@@ -46,6 +46,15 @@
             max-height: 3em;
             overflow: hidden;
         }
+
+        .cause-status {
+            margin-bottom: 0.5rem;
+            height: 1.5rem;
+            
+            span:first-child {
+                margin-right: 0.5rem;
+            }
+        }
     }
 }
 
