--- a/src/shared/public-cause-widget.less
+++ b/src/shared/public-cause-widget.less
@@ -76,14 +76,35 @@
         .donate-and-share {
             display: flex;
             flex-direction: row;
-            justify-content: space-around;
+            justify-content: center;
 
             button.action {
-                width: 45%;
+                width: 10rem;
+		margin-right: 1rem;
+		height: 2.5rem;
+
+		span.icon {
+		    position: relative;
+		    margin-right: 0.5rem;
+		    top: 0.1rem;
+		    display: inline-block;
+		    width: 1.5em;
+		    height: 1.5em;
+		    background-image: url('./static/donate-icon.svg');
+		    background-color: transparent;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                }
+
+		span.text {
+		    position: relative;
+		    top: -0.25rem;
+		}
             }
 
             button.share {
-                width: 45%;
+                width: 10rem;
+		height: 2.5rem;
             }
         }
     }
