Add nicer changes in state when donating and sharing

--- a/src/shared/public-cause-widget.less
+++ b/src/shared/public-cause-widget.less
@@ -78,6 +78,13 @@
             flex-direction: row;
             justify-content: center;
 
+            .action-status {
+                width: 10rem;
+		height: 2.5rem;
+                text-align: center;
+                line-height: 2.5rem;
+            }
+
             button.action {
                 width: 10rem;
 		height: 2.5rem;
