Make images clickable in the home view

--- a/src/shared/public-cause-widget.less
+++ b/src/shared/public-cause-widget.less
@@ -16,7 +16,8 @@
     border: 1px solid @bordercolor;
     box-sizing: border-box;
 
-    .cause-picture {
+    img.cause-picture {
+        display: block;
 	width: 100%;
 	height: auto;
     }    
