Small fixes for styling of the public cause widget

--- a/src/shared/public-cause-widget.less
+++ b/src/shared/public-cause-widget.less
@@ -84,6 +84,13 @@
 		height: 2.5rem;
                 text-align: center;
                 line-height: 2.5rem;
+
+                &.donate {
+                    margin-right: 1rem;
+                }
+
+                &.share {
+                }
             }
 
             button.action {
