--- a/src/shared/home-view.less
+++ b/src/shared/home-view.less
@@ -8,4 +8,18 @@
 	    margin-right: 1em;
 	}	
     }
+
+    &.loading {
+        background-color: red;
+        height: 16rem;
+        line-height: 16rem;
+        text-align: center;
+    }
+
+    &.failed {
+        background-color: red;
+        height: 16em;
+        line-height: 16rem;
+        text-align: center;
+    }
 }
