Add loading screens nice behaviour

--- a/src/client/index.less
+++ b/src/client/index.less
@@ -4,7 +4,12 @@
 @import '../../node_modules/react-datepicker/dist/react-datepicker.css';
 
 @import '../shared/admin-frame';
+@import '../shared/admin-account-view';
+@import '../shared/admin-cause-analytics-view';
+@import '../shared/admin-myactions-view';
+@import '../shared/admin-mycause-view';
 @import '../shared/app-frame';
+@import '../shared/cause-view';
 @import '../shared/cookie-policy-widget';
 @import '../shared/home-view';
 @import '../shared/image-gallery-editor-widget';
