--- a/src/shared/admin-frame.less
+++ b/src/shared/admin-frame.less
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     
-    #sidebar-menu {
+    #admin-sidebar-menu {
         width: 10em;
 
         @media all and (max-width: 800px) {
@@ -61,5 +61,9 @@
                 align-self: center;
             }
         }
+    }
+
+    #admin-content {
+	flex-grow: 1;
     }
 }
