--- a/src/shared/home-view.less
+++ b/src/shared/home-view.less
@@ -1,3 +1,6 @@
+@import './state-transitions';
+
+
 #home-view {
     display: flex;
     flex-wrap: wrap;
@@ -7,19 +10,5 @@
 	div:nth-child(2n+1) {
 	    margin-right: 1em;
 	}	
-    }
-
-    &.loading {
-        background-color: red;
-        height: 16rem;
-        line-height: 16rem;
-        text-align: center;
-    }
-
-    &.failed {
-        background-color: red;
-        height: 16em;
-        line-height: 16rem;
-        text-align: center;
     }
 }
