--- a/src/shared/home-view.less
+++ b/src/shared/home-view.less
@@ -1,4 +1,5 @@
 @import './state-transitions';
+@import './common';
 
 
 #home-view {
@@ -6,9 +7,5 @@
     flex-wrap: wrap;
     margin: 1em;
 
-    @media all and (min-width: 800px) {
-	div:nth-child(2n+1) {
-	    margin-right: 1em;
-	}	
-    }
+    .column-container();
 }
