--- a/src/shared/public-cause-widget.less
+++ b/src/shared/public-cause-widget.less
@@ -1,14 +1,10 @@
 @import './action-button';
 @import './colors';
+@import './common';
 
 
 .public-cause-widget {
-    @media all and (min-width: 800px) {
-	width: 23.49rem;
-    }
-    @media all and (max-width: 800px) {
-	width: 100%;
-    }
+    .half-column();
 
     display: flex;
     flex-direction: column;
