Add action buttons to the cause view

--- a/src/client/index.less
+++ b/src/client/index.less
@@ -9,6 +9,7 @@
 @import '../shared/admin-myactions-view';
 @import '../shared/admin-mycause-view';
 @import '../shared/app-frame';
+@import '../shared/cause-actions-widget';
 @import '../shared/cause-view';
 @import '../shared/cookie-policy-widget';
 @import '../shared/home-view';
