More styling fixes for the cause page

--- a/src/shared/cause-view.less
+++ b/src/shared/cause-view.less
@@ -10,6 +10,7 @@
     #cause-view-head-region {
         display: flex;
         flex-wrap: wrap;
+	margin-bottom: 1rem;
         
 	.column-container();
 
@@ -33,6 +34,7 @@
                 
                 .status {
                     margin-bottom: 0.5rem;
+		    padding-bottom: 2.5rem;
                     height: 1.5rem;
                     
                     span:first-child {
@@ -45,5 +47,7 @@
 
     #cause-view-description {
 	.full-column();
+
+	margin: 0.5rem;
     }
 }
