--- a/src/shared/admin-frame.less
+++ b/src/shared/admin-frame.less
@@ -6,7 +6,7 @@
     flex-direction: row;
     
     #admin-sidebar-menu {
-        width: 10em;
+	flex-basis: 10rem;
 
         @media all and (max-width: 800px) {
             display: none;
@@ -64,6 +64,6 @@
     }
 
     #admin-content {
-	flex-grow: 1;
+	flex-basis: 40rem;
     }
 }
