Proper styling for cause analytics

--- a/src/shared/admin-cause-analytics-view.less
+++ b/src/shared/admin-cause-analytics-view.less
@@ -1,1 +1,9 @@
 @import './state-transitions';
+
+
+table#cause-analytics-table {
+    td {
+        width: 19rem;
+        padding-bottom: 0.5rem;
+    }
+}
