Finished work on myactions view

--- a/src/client/index.less
+++ b/src/client/index.less
@@ -12,10 +12,12 @@
 @import '../shared/cause-actions-widget';
 @import '../shared/cause-view';
 @import '../shared/cookie-policy-widget';
+@import '../shared/donation-for-session-widget';
 @import '../shared/home-view';
 @import '../shared/image-gallery-editor-widget';
 @import '../shared/image-gallery-widget';
 @import '../shared/public-cause-widget';
+@import '../shared/share-for-session-widget';
 @import '../shared/user-info-widget';
 
 /* Reset and global setup */
