--- a/src/shared/admin-myactions-view.less
+++ b/src/shared/admin-myactions-view.less
@@ -1,1 +1,15 @@
 @import './state-transitions';
+
+div#admin-myactions-view {
+    .high-level {
+        margin-bottom: 1rem;
+        
+        p {
+            margin-bottom: 0.5rem;
+        }
+    }
+
+    h2 {
+        margin-bottom: 1rem;
+    }
+}
