More styling for the cause admin panel

--- a/src/shared/admin-frame.less
+++ b/src/shared/admin-frame.less
@@ -65,5 +65,10 @@
 
     #admin-content {
 	flex-basis: 40rem;
+
+        @media all and (max-width: 800px) {
+            margin-left: 1rem;
+            margin-right: 1rem;
+        }
     }
 }
