--- a/src/shared/admin-mycause-view.less
+++ b/src/shared/admin-mycause-view.less
@@ -1,2 +1,43 @@
 @import './state-transitions';
 
+div#admin-mycause-view {
+    form.edit-form {
+        .form-line {
+            margin-bottom: 0.5rem;
+
+            .form-line-info {
+                label {
+                    font-size: 13px;
+                    font-weight: 600;
+                    font-variant: small-caps;
+                }
+
+                .modifiers {
+                    font-size: 13px;
+                    padding-left: 0.5rem;
+                    
+                    &.modified {
+                        color: green;
+                    }
+
+                    &.warning {
+                        color: orange;
+                    }
+                }                
+            }
+
+            input#admin-mycause-title, input#admin-mycause-slug {
+                width: 20rem;
+                @media all and (max-width: 800px) {
+                    width: 100%;
+                }
+            }
+
+            textarea#admin-mycause-description {
+                width: 100%;
+                max-width: 40rem;
+                height: 10rem;
+            }
+        }
+    }
+}
