--- a/src/shared/action-button.less
+++ b/src/shared/action-button.less
@@ -18,12 +18,16 @@ button.action {
     background-image: linear-gradient(to top, #f2f2f2, #f2f2f2);
     background-color: #f2f2f2;
 
-    &:hover, &:active {
+    &:hover:enabled, &:active:enabled {
         border:1px solid #8c8c8c;
         color: #8c8c8c;
         box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
         -moz-box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
         -webkit-box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
         background-color: #f2f2f2;
+    }
+
+    &:disabled {
+        color: #bcbcbc;
     }
 }
