Some work on the creation form

--- a/src/shared/admin-mycause-view.less
+++ b/src/shared/admin-mycause-view.less
@@ -2,6 +2,16 @@
 @import './state-transitions';
 
 div#admin-mycause-view {
+    p.no-cause {
+        margin-bottom: 0.5rem;
+
+        button.action {
+            height: 2rem;
+            width: 12rem;
+            margin-right: 1rem;
+        }        
+    }
+    
     form.edit-form {
         .form-line {
             margin-bottom: 0.5rem;
