Add fields for "required"

--- a/src/shared/admin-mycause-view.less
+++ b/src/shared/admin-mycause-view.less
@@ -34,6 +34,11 @@ div#admin-mycause-view {
                     &.warning {
                         color: orange;
                     }
+
+                    &.mandatory {
+                        color: firebrick;
+                        font-weight: 600;
+                    }
                 }                
             }
 
