--- a/src/shared/action-button.less
+++ b/src/shared/action-button.less
@@ -30,4 +30,21 @@ button.action {
     &:disabled {
         color: #bcbcbc;
     }
+
+    span.warning-icon {
+	margin-right: 0.5rem;
+	top: 0.1rem;
+	display: inline-block;
+	width: 1.5em;
+	height: 1.5em;
+	background-image: url('./static/warning-icon.svg');
+	background-color: transparent;
+	background-repeat: no-repeat;
+	background-size: cover;
+    }
+
+    span.text {
+        position: relative;
+        top: -0.25rem;
+    }    
 }
