Small style tweaks

--- a/src/client/index.less
+++ b/src/client/index.less
@@ -23,6 +23,14 @@
 
 /* Reset and global setup */
 
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 @media all and (min-width: 800px) {
     body {
         width: 800px;
