--- a/src/shared/bank-info-widget.less
+++ b/src/shared/bank-info-widget.less
@@ -18,5 +18,9 @@
     input.value {
 	width: 20rem;
 	margin-right: 0.5rem;
+        
+        @media all and (max-width: 800px) {
+            width: auto;
+        }
     }
 }
