Don't allow changing currency after creation

--- a/src/shared/admin-mycause-view.less
+++ b/src/shared/admin-mycause-view.less
@@ -49,4 +49,14 @@ div#admin-mycause-view {
             width: 12rem;
         }
     }
+
+    .form-line {
+        .goal-currency {
+            margin-left: 0.5rem;
+        }
+
+        .currency-change-warning {
+            margin-top: 0.25rem;
+        }
+    }
 }
