Polish the IBANs editing experience.
We have:
- modifiers info next to the Bank Info big title
- can't add an new IBAN if there's an invalid one present. This is useful to prevent mass adding of IBANS.
  First you add one, then you need to fill it out, then you can add another.
- Tighter coordination with the parent element. We propagate modified & invalid as a UserInfo object to the
  parent, so it can block certain actions (update/create) if the bank info it receives is invalid. Extra
  care was needed when receiving back that info through componentWillReceiveProps

--- a/src/shared/common.less
+++ b/src/shared/common.less
@@ -19,6 +19,26 @@
     }
 }
 
+.modifiersBlock() {
+    .modifiers {
+	font-size: 13px;
+	padding-left: 0.5rem;
+	
+	&.modified {
+            color: green;
+	}
+
+	&.warning {
+            color: orange;
+	}
+
+	&.mandatory {
+            color: firebrick;
+            font-weight: 600;
+	}
+    }
+}
+
 
 .form-line {
     margin-bottom: 0.5rem;
@@ -32,22 +52,6 @@
             font-variant: small-caps;
         }
 
-        .modifiers {
-            font-size: 13px;
-            padding-left: 0.5rem;
-            
-            &.modified {
-                color: green;
-            }
-
-            &.warning {
-                color: orange;
-            }
-
-            &.mandatory {
-                color: firebrick;
-                font-weight: 600;
-            }
-        }                
+        .modifiersBlock();
     }
 }
