Process the picture set in the same way as the bank info widget

--- a/src/shared/image-gallery-editor-widget.less
+++ b/src/shared/image-gallery-editor-widget.less
@@ -1,4 +1,5 @@
 @import './action-button';
+@import './common';
 
 
 .image-gallery-editor-widget {
@@ -8,6 +9,8 @@
     h3 {
 	font-weight: 500;
 	font-variant: small-caps;
+
+	.modifiersBlock();
     }
 
     button.action.add-picture {
