Add a Markdown editor for the description.

--- a/src/client/index.less
+++ b/src/client/index.less
@@ -2,6 +2,7 @@
 
 @import '../../node_modules/normalize.css/normalize.css';
 @import '../../node_modules/react-datepicker/dist/react-datepicker.css';
+@import '../../node_modules/react-simplemde-editor/dist/simplemde.min.css';
 
 @import '../shared/admin-frame';
 @import '../shared/admin-account-view';
