Add author picture in the public cause widget

--- a/src/shared/public-cause-widget.less
+++ b/src/shared/public-cause-widget.less
@@ -41,11 +41,20 @@
         }
 
         .status {
+            display: flex;
             margin-bottom: 0.5rem;
-            height: 1.5rem;
+            height: 2rem;
+            align-items: center;
 
             span:first-child {
                 margin-right: 0.5rem;
+            }
+
+            img.owner-picture {
+                width: 2rem;
+                height: 2rem;
+                border-radius: 1rem;
+                margin-left: auto;
             }
         }
     }
