Add owner info to the cause view

--- a/src/shared/cause-view.less
+++ b/src/shared/cause-view.less
@@ -32,6 +32,23 @@
                 margin-right: 0.5em;
                 margin-bottom: 1em;
 
+                .title {
+                    display: flex;
+                    height: 2rem;
+
+                    img.owner-picture {
+                        width: 2rem;
+                        height: 2rem;
+                        border-radius: 1rem;
+                        margin-left: auto;
+                    }
+                }
+
+                .owner {
+                    margin-bottom: 0.5rem;
+                    height: 2rem;
+                }
+
                 .status {
                     margin-bottom: 0.5rem;
                     padding-bottom: 2.5rem;
